コンテナを調整

--- a/wp-content/themes/restaurant-and-cafe/css/renew.css
+++ b/wp-content/themes/restaurant-and-cafe/css/renew.css
@@ -61,6 +61,12 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     margin: 0;
   }
   /**
+  * layout
+  **/
+  .full-container .container {
+    width: 100%;
+  }
+  /**
   * table
   **/
   .wp-block-table table {
