レイアウト調整・カテゴリ一覧ページをコミット

--- a/wp-content/themes/restaurant-and-cafe/css/renew.css
+++ b/wp-content/themes/restaurant-and-cafe/css/renew.css
@@ -163,6 +163,10 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   .search .search-form {
     width : 100%;
   }
+  .widget_search .search-form {
+    background: transparent;
+    border-bottom: 1px solid black;
+  }
 
   /**
   * header
@@ -245,6 +249,9 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   #primary.index-page section .gallery-item {
     margin-bottom: 0;
+  }
+  #primary.index-page section .gallery-icon {
+    line-height: 0;
   }
   #primary.index-page main.site-main {
     display: flex;
