--- a/wp-content/themes/restaurant-and-cafe/css/renew.css
+++ b/wp-content/themes/restaurant-and-cafe/css/renew.css
@@ -394,6 +394,30 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   #primary.single-page + #secondary {
     margin: 50px 0;
   }
+  #mainvisual.single {
+    position: relative;
+  }
+  #mainvisual.single h2 {
+    position: absolute;
+    color: white !important;
+    font-weight: normal !important;
+    margin: 0 !important;
+    padding: 0;
+    top: 50%;
+    font-size: 2.4vw !important;
+    transform: translateY(-50%);
+    left: 10%;
+    z-index: 1;
+    text-shadow: 1px 1px 3px #00000080;
+    border-bottom: none;
+    line-height: 1.6!important;
+  }
+  #mainvisual.single .wp-block-image {
+    position: relative;
+  }
+  #mainvisual.single .wp-block-image img {
+    opacity: .8;
+  }
   /**
   * owner page
   **/
