--- a/wp-content/themes/restaurant-and-cafe/css/renew.css
+++ b/wp-content/themes/restaurant-and-cafe/css/renew.css
@@ -264,7 +264,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     margin: 0;
     padding: 0;
     top: 50%;
-    font-size: 2.4vw;
+    font-size: 1.8vw;
     transform: translateY(50%);
     left: 10%;
     z-index: 1;
@@ -310,10 +310,11 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   **/
   #mainvisual.categories {
     margin: 0 auto;
-    max-width: 1200px;
   }
   #mainvisual.categories .widget_media_image {
     position: relative;
+    overflow: hidden;
+    padding: 20% 0 0;
   }
   #mainvisual.categories .widget_media_image .widget-title {
     position: absolute;
@@ -322,7 +323,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     margin: 0;
     padding: 0;
     top: 50%;
-    font-size: 2.4vw;
+    font-size: 1.6vw;
     transform: translateY(50%);
     left: 10%;
     z-index: 1;
@@ -331,6 +332,10 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   #mainvisual.categories .widget_media_image img {
     opacity: .8;
+    max-width: 100%;
+    height: auto;
+    position: absolute;
+    top: -50%;
   }
   #mainvisual.categories .widget_media_image .widget-title:after {
     content: none;
@@ -405,7 +410,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     margin: 0 !important;
     padding: 0;
     top: 50%;
-    font-size: 2.4vw !important;
+    font-size: 1.6vw !important;
     transform: translateY(-50%);
     left: 10%;
     z-index: 1;
