--- a/wp-content/themes/restaurant-and-cafe/css/renew.css
+++ b/wp-content/themes/restaurant-and-cafe/css/renew.css
@@ -159,6 +159,22 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   #primary .page .entry-content table tbody tr:nth-child(2n) {
     background: white;
   }
+  @media only screen and (max-width: 767px) {
+    .wp-block-table table {
+      margin: 0 0;
+    }
+  }
+  /**
+  * secondary
+  **/
+  @media only screen and (max-width: 767px) {
+    #secondary {
+      margin: 10px 0 0;
+    }
+    #secondary .widget {
+      margin: 0 0 10px
+    }
+  }
   /**
   * widget
   **/
@@ -167,6 +183,15 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   .widget .widget-title:after {
     width: 100%;
+    height: 1px;
+    background: lightgray;
+  }
+  @media only screen and (max-width: 767px) {
+    .widget .widget-title {
+      margin: 0 0 10px;
+      padding: 0 0 10px;
+      font-size: 18px;
+    }
   }
   /**
   * card
@@ -204,7 +229,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   .widget_search .search-form {
     background-color:transparent;
-    border-bottom: 2px solid #b7b5ac;
+    border-bottom: 1px solid #lightgray;
     border-radius: 0;
     padding: 10px 0px;
   }
@@ -215,6 +240,11 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     background-size: 20px;
     margin: 0;
   }
+  @media only screen and (max-width: 767px) {
+    .widget_search .search-form {
+      border-bottom: 1px solid lightgray;
+    }
+  }
   /**
   * title
   **/
@@ -224,6 +254,10 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
       margin: 0 0 13px;
     }
     .comments-area .comments-title, .comments-area .comment-reply-title {
+      font-size: 18px;
+    }
+    #primary .post .entry-content h2,
+    #primary .page .entry-content h2 {
       font-size: 18px;
     }
   }
@@ -299,6 +333,37 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     .header-inner img {
       height: 30px;
       width: auto;
+    }
+    /**
+    * header navi
+    **/
+    .main-navigation {
+      width: 100%;
+      height: calc(100vh - 80px);
+      padding: 0;
+      -webkit-transform: translateX(100%);
+      -moz-transform: translateX(100%);
+      transform: translateX(100%);
+    }
+    .main-navigation > div + div {
+      width: 100%;
+    }
+    .main-navigation > div + div > div {
+      width : 100%;
+    }
+    .main-navigation ul {
+      width : 100%;
+      align-items: center;
+    }
+    .main-navigation ul li {
+      margin: 0;
+    }
+    .main-navigation ul li a {
+      padding: 10px 0 !important;
+      border: none;
+      color: black !important;
+      text-align: center;
+      font-size: 14px !important;
     }
   }
   /**
@@ -494,6 +559,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   @media only screen and (max-width: 767px) {
     #mainvisual.categories .widget_media_image {
       padding: 0;
+      margin: 0;
     }
     #mainvisual.categories .widget_media_image img {
       top: 0;
@@ -501,6 +567,24 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     }
     #mainvisual.categories .widget_media_image .widget-title {
       transform: translateX(0px);
+    }
+    #primary.archive-page .post .entry-header .entry-title {
+      margin: 0 0 5px;
+    }
+    #primary.archive-page .page-header {
+      margin: 0 0 10px;
+    }
+    #primary.archive-page .page-title {
+      font-size: 18px;
+      line-height: 1.6;
+      margin: 0;
+    }  
+    #primary.archive-page .page-title span {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+    #primary.archive-page .site-main article p {
+      line-height: 1.6;
     }
   }
   /**
@@ -582,6 +666,11 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   **/
   .owner_message {
     margin: 50px 0;
+  }
+  @media only screen and (max-width: 767px) {
+    .owner_message {
+      margin: 25px 0;
+    }
   }
   @keyframes fadeIn {
     0% { opacity: 0; left:0%; }
