--- a/wp-content/themes/restaurant-and-cafe/css/renew.css
+++ b/wp-content/themes/restaurant-and-cafe/css/renew.css
@@ -113,6 +113,11 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     background: none;
     padding: 0;
   }
+  @media only screen and (max-width: 767px) {
+    #primary .post, #primary .page {
+      margin: 0 0 20px;
+    }
+  }
 
   @media only screen and (max-width: 1230px) {
     .container, .keyBig, .l-wrapper {
@@ -169,7 +174,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   **/
   @media only screen and (max-width: 767px) {
     #secondary {
-      margin: 10px 0 0;
+      margin: 25px 0 0;
     }
     #secondary .widget {
       margin: 0 0 10px
@@ -188,7 +193,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   @media only screen and (max-width: 767px) {
     .widget .widget-title {
-      margin: 0 0 10px;
+      margin: 20px 0;
       padding: 0 0 10px;
       font-size: 18px;
     }
@@ -215,6 +220,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     font-family: 'Lato', sans-serif;
     width: 300px;
     text-align: center;
+    font-weight: normal;
   }
   @media only screen and (max-width: 767px) {
     .btn-purple {
@@ -229,7 +235,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   .widget_search .search-form {
     background-color:transparent;
-    border-bottom: 1px solid #lightgray;
+    border-bottom: 1px solid lightgray;
     border-radius: 0;
     padding: 10px 0px;
   }
@@ -315,6 +321,11 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   .main-navigation ul:after {
     content: none;
+  }
+  #menu-opener:before,
+  #menu-opener span,
+  #menu-opener:after {
+    height: 2px;
   }
   @media only screen and (max-width: 767px) {
     .header-inner .container {
@@ -415,9 +426,9 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     z-index: 1;
     opacity: 0;
     text-shadow: 1px 1px 3px #00000080;
-    -webkit-animation: fadeIn 1s ease-in-out 1s infinite;
-        -ms-animation: fadeIn 1s ease-in-out 1s infinite;
-            animation: fadeIn 1s ease-in-out 1s infinite;
+    -webkit-animation: fadeIn 1s ease-in-out 5s infinite;
+        -ms-animation: fadeIn 1s ease-in-out 5s infinite;
+            animation: fadeIn 1s ease-in-out 5s infinite;
     -webkit-animation-fill-mode: forwards;
         -ms-animation-fill-mode: forwards;
             animation-fill-mode: forwards;
@@ -434,6 +445,9 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   #primary.index-page section .gallery-item {
     margin-bottom: 0;
     padding: 0;
+  }
+  #primary.index-page section .gallery-item .landscape {
+    line-height: 0;
   }
   #primary.index-page section .gallery-item img {
     opacity: .8;
@@ -484,8 +498,10 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
   }
-
   @media only screen and (max-width: 767px) {
+    #primary.index-page #mainvisual {
+      margin: 0 0 10px;
+    }
     #primary.index-page section .widget-title {
       line-height: 1;
     }
@@ -536,6 +552,9 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   #mainvisual.categories .widget_media_image .widget-title:after {
     content: none;
   }
+  #primary.archive-page {
+    margin: 0 0 30px;
+  }
   #primary.archive-page .post .entry-header {
     width: 100%;
     order: 2;
@@ -550,6 +569,7 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   #primary.archive-page .page-header {
     width: 100%;
+    margin: 0;
   }
   #primary.archive-page .page-title {
     font-size: 24px;    
@@ -588,6 +608,9 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     color: #6D5458;
   }
   @media only screen and (max-width: 767px) {
+    #mainvisual.categories {
+      margin: 0 0 25px;
+    }
     #mainvisual.categories .widget_media_image {
       padding: 0;
       margin: 0;
@@ -598,6 +621,9 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     }
     #mainvisual.categories .widget_media_image .widget-title {
       transform: translateX(0px);
+    }
+    #primary.archive-page {
+      margin: 0 0 10px;
     }
     #primary.archive-page .post .entry-header .entry-title {
       margin: 0 0 5px;
@@ -691,6 +717,25 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   #primary.search-page ~ #secondary{
     margin: 50px 0;
+  }
+  #primary.search-page .page-header .page-title {
+    font-size: 24px;
+    line-height: 1.6;
+  }
+  @media only screen and (max-width: 767px) {
+    #primary.search-page {
+      margin: 25px 0 0;
+    }
+    #primary.search-page ~ #secondary{
+      margin: 25px 0;
+    }
+    #primary.search-page .page-header .page-title {
+      font-size: 18px;
+    }
+    .search #primary .post .post-thumbnail,
+    .search #primary .page .post-thumbnail {
+      width: 100%;
+    }
   }
   /**
   * owner page
