--- a/restaurant-and-cafe/css/renew.css
+++ b/restaurant-and-cafe/css/renew.css
@@ -461,19 +461,37 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
     flex-wrap: wrap;
     padding: 0;
   }
+  #primary.index-page .main-gallery {
+    overflow: hidden;
+  }
+  #primary.index-page .main-gallery-inner {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: min-content;
+  }
+  #primary.index-page .main-gallery-inner .autoplay-slider {
+    display: flex;
+    min-width: 100%;
+    width: min-content;
+    animation: 60s linear infinite sliderAnimation;
+  }
   #primary.index-page main.site-main article {
-    width: calc(100% / 6);
+    width: 400px;
     margin: 0;
     padding: 0;
-  }
-  #primary.index-page main.site-main article:nth-child( n + 8 ) {
-    display: none;
+    position: relative;
+    height: 190px;
   }
   #primary.index-page main.site-main article a {
     margin: 0;
   }
   #primary.index-page main.site-main article .post-thumbnail {
     height: auto;
+  }
+  @keyframes sliderAnimation {
+    100% {
+      transform: translateX(-50%);
+    }
   }
 
   #animaton_bg {
@@ -506,21 +524,19 @@ color dcleam #FEF5EC; cleam #FFF0E0; gold #B1963B; wgray #FEFEFE; gray #666666;
   }
   @media only screen and (max-width: 767px) {
     #primary.index-page #mainvisual {
-      margin: 0 0 10px;
+      margin: 0 0 5px;
     }
     #primary.index-page section .widget-title {
       line-height: 1;
     }
+    #primary.index-page .main-gallery {
+      margin: 0 0 5px;
+    }
     #primary.index-page main.site-main article {
-      width: calc(100% / 2 - 15px);
-      margin: 0 0 10px;
+      width: 150px;
+      margin: 0;
       padding: 0;
-    }
-    #primary.index-page main.site-main article:nth-child(2n - 1) {
-      margin: 0 10px 10px 5px;
-    }
-    #primary.index-page main.site-main article:nth-child(2n - 2) {
-      margin: 0 5px 10px 10px;
+      height: 71px;
     }
     #animaton_bg img {
       width: auto;
